kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app
  namespace: default
spec:
  containers:
  - image: gcr.io/nifty-yeti-164407/gke-base
    imagePullPolicy: IfNotPresent
    name: app
    ports:
    - containerPort: 3000
  restartPolicy: Always
