kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  gke-base
  labels:
    app:  gke-base
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: gke-base
