kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name:  gke-base
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: gke-base
          servicePort: 80
